# HyperTicket

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DESIGN.md  Dockerfile  ENTERPRISE_UPGRADE_PLAN.md  FINAL_REPORT.md  LICENSE  PRODUCT.md  PROGRESS_REPORT.md  QUICKSTART.md  README.md  config.example.json  docker-compose.yml
.github/workflows/: ci.yml
Admin/: README.md
Admin/include/: admin.hpp
Admin/src/: admin.cpp
CGImysql/include/: Sem.hpp  SqlConnectionPool.hpp  sql_connection_pool.hpp
CGImysql/src/: SqlConnectionPool.cpp  sql_connection_pool.cpp
ChronoLite/: README.md
ChronoLite/include/: AppendFile.hpp  CountDownLatch.hpp  LogCommon.hpp  LogFile.hpp  LogMessage.hpp  Logger.hpp  Timestamp.hpp
ChronoLite/src/: AsynLogging.cpp  CountDownLatch.cpp  LogFile.cpp  LogMessage.cpp  Logger.cpp  Timestamp.cpp
Client/include/: client.hpp
Client/src/: client.cpp
Common/: README.md
Common/include/: AppConfig.hpp  Entities.hpp  Errors.hpp  Protocol.hpp
Common/src/: AppConfig.cpp
Domain/include/: MysqlStmt.hpp  ServiceUtil.hpp
Domain/include/repository/: AdminRepository.hpp  ReservationRepository.hpp  UserRepository.hpp
Domain/include/service/: AdminService.hpp  TicketService.hpp
Domain/src/: ServiceUtil.cpp
Domain/src/service/: TicketService.cpp  TicketServiceTxn.cpp
FixedThreadPool/: README.md
FixedThreadPool/include/: FixedThreadPool.hpp  SyncQueue.hpp
Inet/: README.md
Inet/include/: Buffer.hpp  Callbacks.hpp  Connector.hpp  EPollPoller.hpp  Endian.hpp  EventLoop.hpp  EventLoopThread.hpp  InetAddress.hpp  Socket.hpp  TcpClient.hpp  TcpConnection.hpp  TcpServer.hpp  Timer.hpp  TimerQueue.hpp  Timestamp.hpp
Inet/src/: Acceptor.cpp  Buffer.cpp  Channel.cpp  EPollPoller.cpp  EventLoopThread.cpp  EventLoopThreadPool.cpp  Socket.cpp  TcpClient.cpp  TcpConnection.cpp  TcpServer.cpp  Timer.cpp  TimerQueue.cpp
ScheduledThreadPool/: README.md
ScheduledThreadPool/include/: ScheduledThreadPool.hpp  Timer.hpp  TimerQueue.hpp
ScheduledThreadPool/src/: Timer.cpp  TimerQueue.cpp
Server/: README.md
Server/include/: MetricsManager.hpp  MysqlStmt.hpp  RateLimiter.hpp  RedisConnPool.hpp  RedisSessionManager.hpp  SchemaInitializer.hpp  SessionManager.hpp  ser.hpp
Server/src/: MetricsManager.cpp  RedisSessionManager.cpp  ser.cpp
SqlConnPool/: README.md
SqlConnPool/include/: ConnectionPool.hpp  Semaphore.hpp
SqlConnPool/src/: ConnectionPool.cpp
backend/Admin/src/: admin.cpp
backend/ChronoLite/include/: AsynLogging.hpp
backend/ChronoLite/src/: AppendFile.cpp  AsynLogging.cpp
backend/Client/: README.md
backend/Common/include/: Entities.hpp  Errors.hpp
backend/Domain/include/: ISessionManager.hpp  ServiceUtil.hpp
backend/Domain/include/repository/: TicketRepository.hpp
backend/Domain/src/service/: TicketService.cpp  TicketServiceTxn.cpp
backend/Inet/include/: Acceptor.hpp  Channel.hpp  EventLoopThreadPool.hpp  Poller.hpp  SocketsOps.hpp  TcpServer.hpp  TimerId.hpp
backend/Inet/src/: Connector.cpp  EventLoop.cpp  InetAddress.cpp  Poller.cpp  SocketsOps.cpp  TcpConnection.cpp
backend/ScheduledThreadPool/include/: TimerQueue.hpp
backend/ScheduledThreadPool/src/: TimerQueue.cpp
backend/Server/: README.md
backend/Server/include/: HealthCheck.hpp  SessionManager.hpp
backend/Server/src/: RedisConnPool.cpp  ser.cpp
backend/SqlConnPool/include/: ConnectionPool.hpp
backend/SqlConnPool/src/: ConnectionPool.cpp
db/: init.sql
docker/mysql/: my.cnf
docker/prometheus/: prometheus.yml
docker/redis/: redis.conf
docs/: MULTITHREAD_FIX.md  PROMETHEUS_METRICS_GUIDE.md  REDIS_SESSION_GUIDE.md  REDIS_SESSION_IMPLEMENTATION.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: auth.ts  client.ts  orders.ts  tickets.ts
frontend/src/hooks/: useAuth.ts  useTheme.ts
frontend/src/pages/Admin/: AdminLayout.css  AdminLayout.tsx  Dashboard.css  Dashboard.tsx  TicketManage.css  TicketManage.tsx  index.ts
frontend/src/pages/Auth/: AuthForms.css  AuthLayout.css  AuthLayout.tsx  Login.tsx  Register.tsx  index.ts
frontend/src/pages/Customer/: CustomerLayout.css  CustomerLayout.tsx  OrderList.css  OrderList.tsx  TicketList.css  TicketList.tsx  index.ts
frontend/src/pages/Landing/: Landing.css  Landing.tsx
frontend/src/styles/: tokens.css
frontend/src/types/: index.ts
grafana/: hyperticket-dashboard.json
prometheus/: alert_rules.yml  prometheus.yml
scripts/: benchmark.sh  simple_benchmark.sh
tests/: test_buffer.cpp  test_protocol.cpp  test_redis_session.cpp  test_session.cpp  test_timestamp.cpp  test_util.hpp
